// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@amplitude/babel-plugin-autocapture-transformer adds ampCapture to an existing amplitude import instead of duplicating 1`] = `
"import { init, ampCapture } from '@amplitude/analytics-react-native';
function HomeScreen() {
  init('api-key');
  return /*#__PURE__*/React.createElement(Button, {
    title: "Go",
    onPress: ampCapture(() => console.log('pressed'), {
      event: "Press",
      element: "Button",
      component: "HomeScreen"
    })
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer does not add import when no Button is transformed 1`] = `
"function HomeScreen() {
  return /*#__PURE__*/React.createElement(Text, {
    onPress: () => console.log('pressed')
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer does not transform JSX member expression elements 1`] = `
"function HomeScreen() {
  return /*#__PURE__*/React.createElement(RN.Button, {
    title: "Go",
    onPress: onPress
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer does not transform non-pressable JSX elements 1`] = `
"function HomeScreen() {
  return /*#__PURE__*/React.createElement(View, {
    onPress: () => console.log('pressed')
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer does not transform pressable elements with non-expression onPress handlers 1`] = `
"function HomeScreen() {
  return /*#__PURE__*/React.createElement(Button, {
    title: "Go",
    onPress: "handler"
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer does not transform pressable elements without expression handlers 1`] = `
"function HomeScreen() {
  return /*#__PURE__*/React.createElement(Button, {
    title: "Go"
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer does not transform unknown elements when options omit them 1`] = `
"function HomeScreen() {
  return /*#__PURE__*/React.createElement(CustomButton, {
    title: "Go",
    onPress: onPress
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer ignores boolean accessibilityLabel attributes without values 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen() {
  return /*#__PURE__*/React.createElement(Button, {
    accessibilityLabel: true,
    onPress: ampCapture(onPress, {
      event: "Press",
      element: "Button",
      component: "HomeScreen"
    }),
    title: "Go"
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer ignores empty custom element option arrays 1`] = `
"function HomeScreen() {
  return /*#__PURE__*/React.createElement(CustomButton, {
    title: "Go",
    onPress: onPress
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer ignores spread attributes when collecting capture properties 1`] = `
"function _extends() { return _extends = Object.assign ? Object.assign.bind() : function (n) { for (var e = 1; e < arguments.length; e++) { var t = arguments[e]; for (var r in t) ({}).hasOwnProperty.call(t, r) && (n[r] = t[r]); } return n; }, _extends.apply(null, arguments); }
import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen({
  buttonProps
}) {
  return /*#__PURE__*/React.createElement(Button, _extends({}, buttonProps, {
    accessibilityLabel: "Label",
    onPress: ampCapture(onPress, {
      event: "Press",
      accessibilityLabel: "Label",
      element: "Button",
      component: "HomeScreen"
    }),
    title: "Go"
  }));
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer includes accessibility-label in track event properties 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen() {
  return /*#__PURE__*/React.createElement(Button, {
    accessibilityLabel: "Online test label",
    title: "Online test",
    onPress: ampCapture(func, {
      event: "Press",
      accessibilityLabel: "Online test label",
      testID: "12345",
      element: "Button",
      component: "HomeScreen"
    }),
    testID: "12345"
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer includes element and component for anonymous class expressions assigned to a variable 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
const HomeScreen = class extends React.Component {
  render() {
    return /*#__PURE__*/React.createElement(Button, {
      title: "Go",
      onPress: ampCapture(this.onPress, {
        event: "Press",
        element: "Button",
        component: "HomeScreen"
      })
    });
  }
};"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer includes element and component for arrow function components 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
const HomeScreen = () => {
  return /*#__PURE__*/React.createElement(Button, {
    title: "Go",
    onPress: ampCapture(onPress, {
      event: "Press",
      element: "Button",
      component: "HomeScreen"
    })
  });
};"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer includes element and component for class components 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
class HomeScreen extends React.Component {
  render() {
    return /*#__PURE__*/React.createElement(Button, {
      title: "Go",
      onPress: ampCapture(this.onPress, {
        event: "Press",
        element: "Button",
        component: "HomeScreen"
      })
    });
  }
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer includes element and component for named class expressions 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
const Screen = class HomeScreen extends React.Component {
  render() {
    return /*#__PURE__*/React.createElement(Button, {
      title: "Go",
      onPress: ampCapture(this.onPress, {
        event: "Press",
        element: "Button",
        component: "HomeScreen"
      })
    });
  }
};"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer includes element and component for named function expressions 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
(function HomeScreen() {
  return /*#__PURE__*/React.createElement(Button, {
    title: "Go",
    onPress: ampCapture(onPress, {
      event: "Press",
      element: "Button",
      component: "HomeScreen"
    })
  });
})();"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer includes element and component for object method components 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
const screens = {
  HomeScreen() {
    return /*#__PURE__*/React.createElement(Button, {
      title: "Go",
      onPress: ampCapture(onPress, {
        event: "Press",
        element: "Button",
        component: "HomeScreen"
      })
    });
  }
};"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer includes element and component for object property components 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
const screens = {
  HomeScreen: () => /*#__PURE__*/React.createElement(Button, {
    title: "Go",
    onPress: ampCapture(onPress, {
      event: "Press",
      element: "Button",
      component: "HomeScreen"
    })
  }),
  'SettingsScreen': () => /*#__PURE__*/React.createElement(Button, {
    title: "Go",
    onPress: ampCapture(onPress, {
      event: "Press",
      element: "Button",
      component: "SettingsScreen"
    })
  })
};"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer inserts ampCapture import after existing non-amplitude imports 1`] = `
"import React from 'react';
import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen() {
  return /*#__PURE__*/React.createElement(Button, {
    title: "Go",
    onPress: ampCapture(onPress, {
      event: "Press",
      element: "Button",
      component: "HomeScreen"
    })
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer omits component when the enclosing function is anonymous 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
export default () => {
  return /*#__PURE__*/React.createElement(Button, {
    title: "Go",
    onPress: ampCapture(onPress, {
      event: "Press",
      element: "Button"
    })
  });
};"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer recognizes ampCapture when imported with a string literal export name 1`] = `
"import { 'ampCapture' as capturePress } from '@amplitude/analytics-react-native';
function HomeScreen() {
  void capturePress;
  return /*#__PURE__*/React.createElement(Button, {
    title: "Go",
    onPress: capturePress(onPress, {
      event: "Press",
      element: "Button",
      component: "HomeScreen"
    })
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer reuses an aliased ampCapture import 1`] = `
"import { ampCapture as capturePress } from '@amplitude/analytics-react-native';
function HomeScreen() {
  void capturePress;
  return /*#__PURE__*/React.createElement(Button, {
    title: "Go",
    onPress: capturePress(onPress, {
      event: "Press",
      element: "Button",
      component: "HomeScreen"
    })
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer reuses an existing ampCapture import 1`] = `
"import { ampCapture } from '@amplitude/analytics-react-native';
function HomeScreen() {
  void ampCapture;
  return /*#__PURE__*/React.createElement(Button, {
    title: "Go",
    onPress: ampCapture(onPress, {
      event: "Press",
      element: "Button",
      component: "HomeScreen"
    })
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer still transforms default elements when custom element options are provided 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen() {
  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(Button, {
    title: "Go",
    onPress: ampCapture(onPress, {
      event: "Press",
      element: "Button",
      component: "HomeScreen"
    })
  }), /*#__PURE__*/React.createElement(CustomButton, {
    title: "Go",
    onPress: ampCapture(onPress, {
      event: "Press",
      element: "CustomButton",
      component: "HomeScreen"
    })
  }));
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer supports dynamic accessibilityLabel expressions 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen({
  label
}) {
  return /*#__PURE__*/React.createElement(Button, {
    accessibilityLabel: label,
    title: "Go",
    onPress: ampCapture(onPress, {
      event: "Press",
      accessibilityLabel: label,
      element: "Button",
      component: "HomeScreen"
    })
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer transforms TouchableOpacity onPress handlers 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen() {
  return /*#__PURE__*/React.createElement(TouchableOpacity, {
    onPress: ampCapture(handlePress, {
      event: "Press",
      element: "TouchableOpacity",
      component: "HomeScreen"
    })
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer transforms custom pressable elements from options 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen() {
  return /*#__PURE__*/React.createElement(CustomButton, {
    title: "Go",
    onPress: ampCapture(onPress, {
      event: "Press",
      element: "CustomButton",
      component: "HomeScreen"
    })
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer transforms custom text-change elements from options 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen() {
  return /*#__PURE__*/React.createElement(SearchField, {
    onChangeText: ampCapture(setQuery, {
      event: "ChangeText",
      element: "SearchField",
      component: "HomeScreen"
    }),
    onSubmitEditing: ampCapture(submitQuery, {
      event: "SubmitEditing",
      element: "SearchField",
      component: "HomeScreen"
    })
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer transforms custom value-change elements from options 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen() {
  return /*#__PURE__*/React.createElement(Toggle, {
    value: enabled,
    onValueChange: ampCapture(setEnabled, {
      event: "ValueChange",
      element: "Toggle",
      component: "HomeScreen"
    })
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer wraps Button onPress handlers and adds ampCapture import 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen() {
  return /*#__PURE__*/React.createElement(Button, {
    title: "Go",
    onPress: ampCapture(() => console.log('pressed'), {
      event: "Press",
      element: "Button",
      component: "HomeScreen"
    })
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer wraps Slider onValueChange handlers 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen() {
  return /*#__PURE__*/React.createElement(Slider, {
    value: volume,
    onValueChange: ampCapture(setVolume, {
      event: "ValueChange",
      element: "Slider",
      component: "HomeScreen"
    })
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer wraps Switch onValueChange handlers 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen() {
  return /*#__PURE__*/React.createElement(Switch, {
    value: enabled,
    onValueChange: ampCapture(setEnabled, {
      event: "ValueChange",
      accessibilityLabel: "Enable notifications",
      testID: "notifications-switch",
      element: "Switch",
      component: "HomeScreen"
    }),
    accessibilityLabel: "Enable notifications",
    testID: "notifications-switch"
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer wraps TextInput onChangeText and onSubmitEditing handlers 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen() {
  return /*#__PURE__*/React.createElement(TextInput, {
    accessibilityLabel: "Email",
    testID: "email-input",
    onChangeText: ampCapture(setEmail, {
      event: "ChangeText",
      accessibilityLabel: "Email",
      testID: "email-input",
      element: "TextInput",
      component: "HomeScreen"
    }),
    onSubmitEditing: ampCapture(submitEmail, {
      event: "SubmitEditing",
      accessibilityLabel: "Email",
      testID: "email-input",
      element: "TextInput",
      component: "HomeScreen"
    })
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer wraps function reference onPress handlers 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen({
  onPress
}) {
  return /*#__PURE__*/React.createElement(Button, {
    title: "Go",
    onPress: ampCapture(onPress, {
      event: "Press",
      element: "Button",
      component: "HomeScreen"
    })
  });
}"
`;

exports[`@amplitude/babel-plugin-autocapture-transformer wraps onLongPress handlers on pressable elements 1`] = `
"import { ampCapture } from "@amplitude/analytics-react-native";
function HomeScreen() {
  return /*#__PURE__*/React.createElement(Pressable, {
    onLongPress: ampCapture(() => console.log('long press'), {
      event: "LongPress",
      element: "Pressable",
      component: "HomeScreen"
    })
  });
}"
`;
